# tg-reactions-randomer

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: exceptions.py  logger.py  main.py  modes.py  params.py  tg.py
app/parser/: cmd.py  env.py
